Fixed some spacing things and removed some unneeded headers

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+.textsection p.first {
+  margin-top: 30px;
+}
+
 .textsection p {
   margin: 10px 20px;
   margin-bottom: 20px;
