--- a/styles/main.css
+++ b/styles/main.css
@@ -191,8 +191,8 @@ body {
 
 .textsection {
     color: #333;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 #footseperator {
